--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1 th:text="${name}">Name</h1>
-<!-- ${name} 값이 없을 경우 Name 출력. -->
+<!-- 서버사이드 랜더링을 하면 ${name}이 출력되고, 순수한 html로 호출하면 'Name' 출력. -->
 </body>
 </html>
